hphp/test/slow/redeclared_classes/1474.php.expectf
object(X)#1 (0) {
}

Fatal error: Call to undefined method V::bar from anonymous context in %s/test/slow/redeclared_classes/1474.php on line 28
